template styles added

--- a/app/templates/menubar.html
+++ b/app/templates/menubar.html
@@ -1,7 +1,7 @@
-<nav class="navbar nav-justified">
-  <div class="nav justify-content-center">
-    <input type="button" class="btn btn-primary" value="Quiz Home"/>
-    <input type="button" class="btn btn-primary" value="Create Quiz"/>
-    <input type="button" class="btn btn-primary" value="Take Quiz"/>
+<nav class="navbar navbar-default">
+  <div class="nav nav-tabs-justified">
+    <input type="button" class="btn btn-default navbar-btn" value="Quiz Home"/>
+    <input type="button" class="btn btn-default navbar-btn" value="Create Quiz"/>
+    <input type="button" class="btn btn-default navbar-btn" value="Take Quiz"/>
   </div>
 </nav>
