--- a/app/templates/menubar.html
+++ b/app/templates/menubar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-default">
   <div class="nav nav-tabs-justified">
-    <input type="button" class="btn btn-default navbar-btn" value="Quiz Home"/>
+    <input type="button" class="btn btn-default navbar-btn" ng-value="appInformation.appName"/>
     <input type="button" class="btn btn-default navbar-btn" value="Create Quiz"/>
     <input type="button" class="btn btn-default navbar-btn" value="Take Quiz"/>
   </div>
