quizContainer added in main index-html

--- a/app/templates/Modal/quizContainer.html
+++ b/app/templates/Modal/quizContainer.html
@@ -1,3 +1,15 @@
 <div class="quizcontainer">
+  <!-- If quizMode == appMode.CREATEQUIZ -->
+  <div ng-show="quizMode == appMode.CREATEQUIZ">
 
+  </div>
+  <div ng-show="quizMode == appMode.ADDQUESTION">
+    
+  </div>
+  <div ng-show="quizMode == appMode.SUCCESSQUIZ">
+
+  </div>
+  <div ng-show="quizMode == appMode.TAKEQUIZ">
+
+  </div>
 </div>
