--- a/app/templates/menubar.html
+++ b/app/templates/menubar.html
@@ -1,7 +1,10 @@
 <nav class="navbar navbar-default">
   <div class="nav nav-tabs-justified">
-    <input type="button" class="btn btn-default navbar-btn" ng-value="appInformation.appName"/>
-    <input type="button" class="btn btn-default navbar-btn" value="Create Quiz"/>
-    <input type="button" class="btn btn-default navbar-btn" value="Take Quiz"/>
+    <input type="button" class="btn btn-default navbar-btn" ng-value="appInformation.appName"
+      ng-click="changeAppMode(appMode.STARTAPP); clearFields();"/>
+    <input type="button" class="btn btn-default navbar-btn" value="Create Quiz"
+      ng-click="changeAppMode(appMode.CREATEQUIZ)"/>
+    <input type="button" class="btn btn-default navbar-btn" value="Take Quiz"
+      ng-click="changeAppMode(appMode.TAKEQUIZ)"/>
   </div>
 </nav>
