Added Questions, but has Error in questions length

--- a/app/templates/menubar.html
+++ b/app/templates/menubar.html
@@ -1,9 +1,9 @@
 <nav class="navbar navbar-default">
   <div class="nav nav-tabs-justified">
     <input type="button" class="btn btn-default navbar-btn" ng-value="appInformation.appName"
-      ng-click="changeAppMode(appMode.STARTAPP); clearFields();"/>
+      ng-click="changeAppMode(appMode.STARTAPP); clearField();"/>
     <input type="button" class="btn btn-default navbar-btn" value="Create Quiz"
-      ng-click="changeAppMode(appMode.CREATEQUIZ)"/>
+      ng-click="changeAppMode(appMode.CREATEQUIZ); "/>
     <input type="button" class="btn btn-default navbar-btn" value="Take Quiz"
       ng-click="changeAppMode(appMode.TAKEQUIZ)"/>
   </div>
